--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://media-hosting.imagekit.io/128c1bba87754dc0/BinGo-removebg-preview.png?Expires=1840122240&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=H7VeKwf0yp8qDYTtA9E2S7MhcL~SpigLG3f6HpkybB0droQ57t20WwHBTXoLz6vrSqZHEgpm1BNHC~IygcuM~~9w-0FBJWW9fBEYo-2~jgd6vpHbXu6CoSlLuoQ8d1OBnFrO9tk0i3zUKyT-ccJUsO1Qav1rvy2lUBGL0T5Fsh-L-VXRm488GL6FuYhjtgeQBNekljsBsZHz5acxzC3YfLeNLup-cPYES5DI2ksFCzvRJxLJnWoUogjyK2mWwZNWKZqYqIUL5KU30FHDxfxn61K6T0Jxb4ZMA8P8bCsYEQ1niHxYMZu2DQJgBPOP2k7uesXKdGKuE9eoHUlDFTmaRQ__" alt="Waste Management">
+                <img src="/public/Images/bingo.png" alt="Waste Management">
             </div>
         </div>
     </section>
