--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="public\Images\bingo.png" alt="Waste Management">
+                <img src="public/Images/bingo.png" alt="Waste Management">
             </div>
         </div>
     </section>
